--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -8,6 +8,7 @@
 	height: 100vh;
 	//background-color: $c-bg; //#2018
 
+	// re-name to abs-container
 	.profiles-layout_bg-container {
 		position: absolute;
 		top: 0;
@@ -18,17 +19,50 @@
 		z-index: 1;
 	}
 
+	.profiles-layout_toolbar-container {
+
+		.slpInfoBox {
+			position: absolute;
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: flex-end;
+			align-items: center;
+			margin-left: $col-w * 9;
+			margin-top: 3em;
+			width: $col-w * 2.5;
+			font-size: 0.8em;
+			line-height: 1.5;
+			font-weight: 600;
+			text-align: right;
+			color: $c-text-subtle; //$c-text-main;
+			z-index: 99;
+			//border: 1px solid red;
+
+			button {
+				margin-left: 1em;
+				height: 48px;
+				width: auto;
+			}
+		}
+	}
+
 	.profiles-layout_drawer-left {
 		position: absolute;
 		display: flex;
 		flex-flow: column nowrap;
-		//justify-content: space-around;
 		top: 0;
 		left: 0;
 		width: $col-w * 5;
 		height: 100%;
+		background-color: #0fabc1;
+		background-image:
+		url("../img/profiles/sky-75alpha.png");
+		//background-blend-mode:  screen;
+		background-position: top right;
+		background-repeat: no-repeat;
+		background-size: auto 100%;
 		z-index: 90;
-		border: 1px solid violet;
+		//border: 1px solid violet;
 	}
 
 	.profiles-layout_content-container {
@@ -40,100 +74,22 @@
 		height: $row-h * 5;
 		width: $col-w * 5.5;
 		z-index: 10;
-		border: 1px solid red;
+		//border: 1px solid red;
 	}
 }
 
 
 // ================================================
-// STATE STYLES
+// PROFILES LIST  .profiles-layout_drawer-left 
 // ================================================
-
-// Profiles User List
-//.profiles-layout_drawer-left
-
-.profiles_list-head {
-	position: relative;
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: flex-end;
-	height: $row-h * 1.25;
-	width: 100%;
-	background-color: pink;
-	border: 1px solid red;
-
-	.header-img {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-	}
-	.closeBox {
-		position: absolute;
-	}
-	.head-content {
-		position: relative;
-		display: flex;
-		flex-flow: column nowrap;
-		// justify-content: flex-end;
-
-		.title {
-			position: relative;
-			display: flex;
-			width: 100%;
-			height: $row-h * 0.25;
-			padding-left: $col-w * 2;
-			border: 1px solid red;
-		}
-		.searchBar {
-			position: relative;
-			display: flex;
-			width: 100%;
-			height: $row-h * 0.25;
-			padding-left: $col-w * 2;
-			border: 1px solid red;
-		}
-	}
-}
+// imports sliding drawer styles for profiles list 
+	@import 'drawer-template/profiles-drawer';
 
 
-.profiles_list-body {
-	position: relative;
-	display: flex;
-	flex-flow: column nowrap;
-	// justify-content: flex-end;
-	height: $row-h * 3;
-	width: 100%;
-	background-color: lightGreen;
-}
-
-.profiles_list-foot {
-	position: relative;
-	display: flex;
-	//flex-flow: column nowrap;
-	//justify-content: flex-end;
-	height: $row-h * 1;
-	width: 100%;
-	background-color: lightBlue;
-	border: 1px solid blue;
-}
-
-
-.profiles__list {
-	height: 100%;
-	width: 100%;
-	background-color: lightgray;
-	// flex: 2 0 0%;
-	// margin-right: 10px;
-	border: 1px solid red;
-}
-
-.profiles-flex {
-	flex-flow: column;
-	display: flex;
-	//margin-top: 20px;
-}
-
-// ------------------------------
+// ================================================
+// PROFILES CARD
+//.profiles-layout_drawer-left 
+// ================================================
 
 .profiles-card {
 	display: flex;
@@ -141,16 +97,34 @@
 	background-color: $white;
 	width: 100%;
 	height: $row-h * 4.5;
-	padding: 2em 0;
 	border-radius: 10px;
+	//box-shadow: $itemShadow;
+	box-shadow:2px 2px 4px rgba(0,0,0,0.25);
 }
 
 .card-head {
+	position: relative;
+	display: flex;
+	flex-flow: column nowrap;
+	width: 100%;
+	height: $row-h;
+	//border: 1px solid red;
+
 	.card-headBox {
 		display: flex;
+		padding: 2em 2.5em;
+		padding-bottom: 0.25em;
+		color: $c-text-main;
 		flex-direction: row nowrap;
+		align-items: center;
+		//border: 1px solid red;
 	}
-	.name {}
+	h1 {
+
+		font-size: 2em;
+		color: $c-text-main;
+		font-weight: 400;
+	}
 } // end card-head
 
 .card-navBox {
@@ -163,17 +137,46 @@
 	border-bottom: 2px solid $c-lightBlue;
 
 	.pro_navitem {
-		padding: 0.5em 0;
+		padding: 0.5em 1em;
 		color: $c-text-main;
 		font-size: 0.9em;
 		font-weight: 400;
-		//margin-right: 3em;
+		border-top: 2px solid white;
+		border-bottom: 2px solid white;
+
+		&.pro_navitem--active {
+			font-weight: 700;
+			border-top: 2px solid $c-text-main;
+			border-bottom: 2px solid $c-text-main;	
+		}
 	}
+
 }
 
-// ------------------------------
+.card-bodyBox {
+	position: relative;
+	display: flex;
+	// height: $row-h * 3.75;
+	// width: $col-w * 5.5;
+	// border: 1px solid blue;
+} // .card-bodyBox
 
-.logout {}
+
+// -------------------------------------------
+// wrappers, not presentational, 
+// in profiles_template.html
+.card-switchParent{} 
+.card-switchBox{} 	
+
+
+// -------------------------------------------
+// presentational styles for card content	
+@import 'card-templates/profiles_card-content';
+
+
+
+// ------------------------------
+// ------------------------------
 
 p.display-name {
 	margin-bottom: 0px;
