--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -759,13 +759,14 @@ input, textarea {
   height: 16.66667vh; }
   .card-head .card-headBox {
     display: flex;
+    height: 12.5vh;
     padding: 2em 2.5em;
     padding-bottom: 0.25em;
     color: #3D6D84;
     flex-direction: row nowrap;
     align-items: center; }
   .card-head h1 {
-    font-size: 2em;
+    font-size: 1.5em;
     color: #3D6D84;
     font-weight: 400; }
 
@@ -773,18 +774,24 @@ input, textarea {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
-  height: auto;
+  align-items: center;
+  height: 4.16667vh;
   width: 100%;
   border-top: 2px solid #ace2e5;
   border-bottom: 2px solid #ace2e5; }
   .card-navBox .pro_navitem {
-    padding: 0.5em 1em;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    height: 4.16667vh;
+    padding: 0em 1em;
     color: #3D6D84;
     font-size: 0.9em;
     font-weight: 400;
     border-top: 2px solid white;
     border-bottom: 2px solid white; }
     .card-navBox .pro_navitem.pro_navitem--active {
+      height: 4.16667vh;
       font-weight: 700;
       border-top: 2px solid #3D6D84;
       border-bottom: 2px solid #3D6D84; }
