--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -112,6 +112,7 @@
 
 	.card-headBox {
 		display: flex;
+		height: $row-h * 0.75;
 		padding: 2em 2.5em;
 		padding-bottom: 0.25em;
 		color: $c-text-main;
@@ -121,7 +122,7 @@
 	}
 	h1 {
 
-		font-size: 2em;
+		font-size: 1.5em;
 		color: $c-text-main;
 		font-weight: 400;
 	}
@@ -131,13 +132,18 @@
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-around;
-	height: auto;
+	align-items: center;
+	height: $row-h * 0.25;
 	width: 100%;
 	border-top: 2px solid $c-lightBlue;
 	border-bottom: 2px solid $c-lightBlue;
 
 	.pro_navitem {
-		padding: 0.5em 1em;
+		display: flex;
+		flex-flow: column nowrap;
+		justify-content: center;
+		height: $row-h * 0.25;
+		padding: 0em 1em;
 		color: $c-text-main;
 		font-size: 0.9em;
 		font-weight: 400;
@@ -145,6 +151,7 @@
 		border-bottom: 2px solid white;
 
 		&.pro_navitem--active {
+			height: $row-h * 0.25;
 			font-weight: 700;
 			border-top: 2px solid $c-text-main;
 			border-bottom: 2px solid $c-text-main;	
