--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -32,19 +32,22 @@
 			width: $col-w * 2.5;
 			font-size: 0.8em;
 			line-height: 1.5;
-			font-weight: 600;
+			//font-weight: 600;
 			text-align: right;
 			color: $c-text-subtle; //$c-text-main;
 			z-index: 99;
-			//border: 1px solid red;
+			// border: 1px solid red;
 
-			button {
-				margin-left: 1em;
-				height: 48px;
-				width: auto;
+			.slp-nameBox {
+				margin-right: 1.25em;
+				text-align: right;
+				font-size: 1.2em;
+				// font-weight: 600;
+				line-height: 1.5;
 			}
 		}
 	}
+
 
 	.profiles-layout_drawer-left {
 		position: absolute;
@@ -184,32 +187,69 @@
 
 // ------------------------------
 // ------------------------------
+// Sorry these are divs. Its tedious to overwrite ionic's styles. If this causes probs, just let me know.
 
-p.display-name {
-	margin-bottom: 0px;
-	padding: 10px;
-	display: table-cell;
-	vertical-align: middle;
-}
-
-.flex-align-right {
+.r-btn {
 	display: flex;
-	flex-direction: row-reverse;
+	flex-flow: row nowrap;
+	justify-content: space-around;
+	align-items: center;
+	text-align: center;
+	width: auto;
+	margin: 0 1em;
+	margin-right: 1em;
+	padding: 0.5em 1.35em;
+
+	border-radius: 10px;
+	background-color: #ACE2E5;
+	border-bottom: 1px solid #A1D3D3;
+	border-right: 1px solid #A1D3D3;
+	cursor: pointer;
+}
+.r-btn:active {
+	background-color: #D7F4F3;
 }
 
-.profiles__recordings .item-radio {
-	border-bottom-style: solid;
-	border-bottom-width: 2px;
-	border-bottom-color: black;
+.r-btn .btn-text {
+	font-size: 1em;
+	line-height: 1.5;
+	font-weight: 600;
+	color: $c-text-subtle;
+	text-decoration: none;
+	margin-right: 1em;
 }
 
-.profiles__recordings ion-item.selected {
-	background-color: lightgray;
+.r-btn i {
+	font-size: 2.5em;
 }
 
-.profiles__recordings ion-item.activated {
-	background-color: white;
-}
+
+
+// p.display-name {
+// 	margin-bottom: 0px;
+// 	padding: 10px;
+// 	display: table-cell;
+// 	vertical-align: middle;
+// }
+
+// .flex-align-right {
+// 	display: flex;
+// 	flex-direction: row-reverse;
+// }
+
+// .profiles__recordings .item-radio {
+// 	border-bottom-style: solid;
+// 	border-bottom-width: 2px;
+// 	border-bottom-color: black;
+// }
+
+// .profiles__recordings ion-item.selected {
+// 	background-color: lightgray;
+// }
+
+// .profiles__recordings ion-item.activated {
+// 	background-color: white;
+// }
 
 // .item-radio.uploaded {
 // 	border-left-style: solid;
@@ -217,72 +257,72 @@ p.display-name {
 // 	border-left-color: green;
 // }
 
-.item-radio.not_uploaded {
-	border-left-style: solid;
-	border-left-width: 5px;
-	border-left-color: red;
-}
+// .item-radio.not_uploaded {
+// 	border-left-style: solid;
+// 	border-left-width: 5px;
+// 	border-left-color: red;
+// }
 
-.upload_badge.uploaded {
-	color: green;
-	font-weight: bold;
-}
+// .upload_badge.uploaded {
+// 	color: green;
+// 	font-weight: bold;
+// }
 
-.upload_badge.not_uploaded {
-	color: red;
-	font-weight: bold;
-}
+// .upload_badge.not_uploaded {
+// 	color: red;
+// 	font-weight: bold;
+// }
 
-.profiles button
-{
-	font-size: 12px;
-	min-width: 100px;
-}
+// .profiles button
+// {
+// 	font-size: 12px;
+// 	min-width: 100px;
+// }
 
-.profiles h2
-{
-	font-size: 22px;
-}
+// .profiles h2
+// {
+// 	font-size: 22px;
+// }
 
-.profiles__recordings ion-scroll{
-	height: 340px;
-}
-
-
-
-.profiles__info
-{
-	flex: 3 0 0%;
-	margin-right: 10px;
-}
-
-.profiles__recordings {
-	flex: 3 0 0%;
-}
+// .profiles__recordings ion-scroll{
+// 	height: 340px;
+// }
 
 
 
-.button-row {
-	flex-flow: row nowrap;
-	display: flex;
-	//margin-top: 20px;
-	width: 100%;
-}
+// .profiles__info
+// {
+// 	flex: 3 0 0%;
+// 	margin-right: 10px;
+// }
 
-.column-div {
-	flex: 1 0 0%;
-}
+// .profiles__recordings {
+// 	flex: 3 0 0%;
+// }
 
-.profiles-contentBox .radio-content .item-content {
-	padding-right: 0px;
-	text-overflow: initial;
-}
 
-.profiles-contentBox .radio-content span {
-	margin-right: 64px;
-}
 
-.upload_badge {
-	color: #00bb00;
-	font-weight: bold;
-}
+// .button-row {
+// 	flex-flow: row nowrap;
+// 	display: flex;
+// 	//margin-top: 20px;
+// 	width: 100%;
+// }
+
+// .column-div {
+// 	flex: 1 0 0%;
+// }
+
+// .profiles-contentBox .radio-content .item-content {
+// 	padding-right: 0px;
+// 	text-overflow: initial;
+// }
+
+// .profiles-contentBox .radio-content span {
+// 	margin-right: 64px;
+// }
+
+// .upload_badge {
+// 	color: #00bb00;
+// 	font-weight: bold;
+// }
