--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -717,21 +717,40 @@ input, textarea {
         text-align: center;
         color: white;
         z-index: 93; }
-      .profiles_list-head .head-content .bannerBox .searchBar {
-        position: relative;
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        margin-left: 15.41667vw;
-        width: 23.33333vw;
-        height: 65%;
-        padding: 1em;
-        background-color: rgba(62, 109, 124, 0.75);
-        color: white;
-        font-weight: 500;
-        border-radius: 24px;
-        z-index: 92;
-        border: 1px solid red; }
+
+.searchBar {
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 15.41667vw;
+  width: 23.33333vw;
+  height: 65%;
+  padding: 1em;
+  background-color: rgba(62, 109, 124, 0.75);
+  color: white;
+  font-weight: 500;
+  border-radius: 24px;
+  z-index: 92; }
+  .searchBar .searchBar-label {
+    position: relative;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center; }
+    .searchBar .searchBar-label i {
+      font-size: 1.25em !important;
+      font-weight: 400 !important;
+      color: #c2f2f2;
+      margin-right: 0.5em; }
+    .searchBar .searchBar-label input[type="text"].nameSearch {
+      width: auto;
+      font-size: 1.2em !important;
+      font-weight: 600 !important;
+      color: white !important;
+      background-color: transparent !important;
+      border-radius: 10px; }
 
 .profiles_list-body {
   position: relative;
@@ -741,8 +760,7 @@ input, textarea {
   height: 55vh;
   width: 100%;
   padding-left: 16.66667vw;
-  text-align: left;
-  border: 1px solid lime; }
+  text-align: left; }
 
 .item, .item-content {
   background-color: transparent !important; }
