--- a/staRt/www/states/root/profiles/drawer-template/_profiles-drawer.scss
+++ b/staRt/www/states/root/profiles/drawer-template/_profiles-drawer.scss
@@ -1,188 +1,213 @@
+.layout_head-body {
+	position: relative;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: flex-start;
+	//border: 1px solid red;
+}
+
+.layout_foot {
+	position: relative;
+	display: flex;
+	flex-flow: column nowrap;
+	//justify-content: space-between;
+	justify-content: flex-end;
+	align-items: center;
+	background-color: transparent;
+	height: $row-h * 2;
+	width: 100%;
+	//border: 1px solid blue;
+} 
+
+
 // ================================================
 // PROFILES LIST
 //.profiles-layout_drawer-left 
 // z-index: 90;
 // ================================================
+.red { border: 1px solid red; }
 
-.profiles_list-head {
+.temp {
+	width: 100%;
+	min-height: 2em;
+}
+
+.profiles_list-head { // height: $row-h * 1.5;
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
-	justify-content: flex-end;
-	height: $row-h * 1.45;
+	justify-content: flex-start;
+	height: $row-h * 1.5;
 	width: 100%;
-	//border: 1px solid red;
+	//border: 1px solid lime;
 
 	.header-img {
 		position: absolute;
-		top: 0;
 		margin-left: $col-w * 1.5;
+		top: 0;
+		left: 0;
 		width: 70%;
 		height: $row-h;
 		background-image: url('../img/profiles/birdsInClouds.svg');
 		background-repeat: no-repeat;
 		background-position: center bottom;
     	background-size: contain;
+    	z-index: 90;
 	}
 
-	.closeBox {
-		position: absolute;
+	.closeBtn-row {
+		position: relative;
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: flex-end;
 		align-items: center;
-		padding: 1em;
-		top: 0;
-		left: $col-w * 4;
 		height: $row-h * 0.5;
-		width: $col-w;
-		color: $c-bg;
-		font-size: 2em;
-		font-weight: 600;
-		border-left: 1px solid red;
-		border-bottom: 1px solid red;
-	}
-
-	.title {
-		position: relative;
-		display: flex;
-		flex-flow: column nowrap;
-
-		justify-content: flex-end;
-		width: 100%;
-		height: $row-h * 0.5;
-		padding-left: $col-w * 2;
-		color: $c-text-main; //white; //
-		font-size: 1.15em;
-		font-weight: 600;
-		text-align: left;
-		//z-index: 92;
-		//border-top: 1px solid red;
-	}
-
-
-	.head-content {
-		position: relative;
-		display: flex;
-		flex-flow: column nowrap;
-		// justify-content: flex-end;
-
-		// ----------------------------------
-		.bannerBox {
+		z-index: 95;
+	
+		.closeBtn {
 			position: relative;
 			display: flex;
-			flex-flow: row nowrap;
+			justify-content: center;
 			align-items: center;
-			width: 100%;
-			height: $row-h * 0.45;
-			z-index: 90;
+			height: 100%;
+			width: $row-h * 0.5;
 
-			.banner {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-color: #467c91;
-				//z-index: 90;
+			color: $c-bg;
+			font-size: 2em;
+			font-weight: 600;
+			border-left: 1px solid red;
+			border-bottom: 1px solid red;
+			z-index: 95;
+		}	
+	}
 
-				.banner-hl {
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 50%;
-					background-color: #49889b;
-					//z-index: 91;
-				}
-
-			} // .banner
-
-			.banner-text {
-				display: flex;
-				justify-content:center;
-				align-items: center;
-				height: auto;
-				width: 100%;
-				text-align: center;
-				color: white;
-				// border: 2px solid red;
-				z-index: 93;
-			}
-
-
-		} // .bannerBox
-	} // .head-content
-} // .profiles_list-head
-
-
-.searchBar { 
-	position: relative;
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: flex-start;
-	align-items: center;
-	margin-left: $col-w * 1.85;
-	width: $col-w * 2.8;
-	height: 65%;
-	padding: 1em;
-	background-color:rgba(62,109,124,0.75);
-	color: white;
-	font-weight: 500;
-	border-radius: 24px;
-	z-index: 92;
-	//border: 1px solid red;
-
-	.searchBar-label {
+	.title-row {
 		position: relative;
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: flex-start;
-		align-items: center;
+		align-items: flex-end;
+		height: $row-h * 0.5;
+		width: 100%;
+		z-index: 90;
 	
-		i {
-			font-size: 1.25em !important;
-			font-weight: 400 !important;
-			color: $c-bg;
-			//color: red !important;
-			margin-right: 0.5em;
-			// border: 1px solid red;
-		}
-
-		input[type="text"].nameSearch {
+		.title {
+			position: relative;
+			display: flex;
 			width: auto;
-			font-size: 1.2em !important;
-			font-weight: 600 !important;
-			color: white !important;
-			background-color: transparent !important;
-			border-radius: 10px;
+			height: auto;
+			padding-left: $col-w * 2;
+			color: $c-text-main; //white; //
+			font-size: 1em;
+			font-weight: 600;
+			text-align: left;
+			//z-index: 92;
+			//border: 1px solid red;
 		}
-	} // end searchBar-label
-}
+
+	}
+
+	.seachBar-row {
+		position: relative;
+		display: flex;
+		flex-flow: row nowrap;
+		//justify-content: 
+		align-items: center;
+		height: $row-h * 0.5;
+		width: 100%;
+	
+		.searchBar { 
+			position: relative;
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: flex-start;
+			align-items: center;
+			margin-left: $col-w * 1.85;
+			width: $col-w * 2.8;
+			height: 65%;
+			padding: 1em;
+			background-color:rgba(62,109,124,0.75);
+			color: white;
+			font-weight: 500;
+			border-radius: 24px;
+			z-index: 92;
+			//border: 1px solid red;
+
+			.searchBar-label {
+				position: relative;
+				display: flex;
+				flex-flow: row nowrap;
+				justify-content: flex-start;
+				align-items: center;
+			
+				i {
+					font-size: 1.25em !important;
+					font-weight: 400 !important;
+					color: $c-bg;
+					margin-right: 0.5em;
+					// border: 1px solid red;
+				}
+
+				input[type="text"].nameSearch {
+					width: auto;
+					font-size: 1.2em !important;
+					font-weight: 600 !important;
+					color: white !important;
+					background-color: transparent !important;
+					border-radius: 10px;
+				}
+			} // end searchBar-label
+		} // searchBar
+	} // searchBar-row
+
+} // .profiles_list-head
 
 
+.banner-bg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #467c91;
+	//z-index: 90;
 
+	.banner-hl {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 50%;
+		background-color: #49889b;
+		//z-index: 91;
+	}
+} // .banner
 
+// ================================================
+// PROFILES BODY
+//.profiles-layout_drawer-left 
+// z-index: 90;
+// ================================================
 
-// ======================================
 .profiles_list-body {
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: space-between;
-	height: $row-h * 3.3;
+	height: $row-h * 2.5;
 	width: 100%;
 	padding-left: $col-w * 2;
 	text-align: left;
 	//border: 1px solid lime;
+
+	.item, .item-content { // ionic class overwrite
+	background-color: transparent !important;
+	}
+	.item { // ionic class overwrite
+		border-bottom: 1px solid rgba(255,255,255, 0.5);
+	}
 }
 
-.item, .item-content { // ionic class overwrite
-	background-color: transparent !important;
-}
-.item { // ionic class overwrite
-	border-bottom: 1px solid rgba(255,255,255, 0.5);
-}
 
 .name-item {
 	position: relative;
@@ -208,67 +233,189 @@
 	// border: 1px solid white;
 }
 
-.testerNote {
+
+
+
+// ================================================
+// PROFILES FOOT
+//.profiles-layout_drawer-left 
+// z-index: 90;
+// ================================================
+
+.profiles_list-foot { // content parent class
+	// position: relative;
+	// display: flex;
+	// flex-flow: column nowrap;
+	// //justify-content: space-between;
+	// justify-content: flex-end;
+	// align-items: center;
+	// background-color: transparent;
+	// height: $row-h * 2;
+	// width: 100%;
+	// border: 1px solid blue;
+}
+
+.footRow { // main layout class
 	position: relative;
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: left;
+	justify-content: center;
+	//justify-content: space-around;
 	align-items: center;
-	margin-top: 1em;
-	padding: 1em 0;
+	padding-left: $col-w * 1.5;
+	width: 100%;
 	color: $c-text-main;
-	//font-weight: 600;
-	font-size: 0.9em;
-	// border-top: 1px solid $c-text-subtle;
+	//border: 1px solid pink;
 }
 
-// -------------------------------------------------
-.profiles_list-foot {
+
+
+.profiles_list-foot 
+.userInfo-container { // height: $row-h * 0.75;
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
-	justify-content: space-around;
-	align-items: center;
-	background-color: #edf9f8;
-	height: $row-h * 1.33;
+	justify-content: flex-end;
+	height: $row-h * 0.85;
 	width: 100%;
-	padding-left: $col-w * 1.5;
-	padding-bottom: $row-h * 0.15;
+	border-top: 4px solid $c-bg; //$c-text-main;
+	//border: 1px solid pink;
 
-	.footRow {
+	.testerNote-row {
 		position: relative;
 		display: flex;
-		flex-flow: row nowrap;
+		// flex-flow: row nowrap;
+		align-items: flex-start;
+		height: 64px;
 		//justify-content: center;
-		justify-content: space-around;
-		align-items: center;
-		height: 50%;
-		width: 100%;
-		color: $c-text-main;
-		
+		//padding-left: $col-w * 1.5;
 		//border: 1px solid pink;
-	
-		button {
-			background-color: #93c9c7;
-			// padding: 1em;
+
+		.testerNote {
+			position: relative;
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: flex-start;
+			align-items: center;
+			height: 100%;
+			color: $c-text-main;
+			font-weight: 600;
+			font-size: 0.8em;
+			//border-top: 1px solid $c-text-subtle;
 		}
+	}
+
+	.newUserBtn-row {
+		height: 64px;
+		//border: 1px solid pink;
+
+		.newUserBtn {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100%;
+			margin: 0 0.5em;
+			// margin-top: 1.5em;
+			padding: 0 2em;
+			min-width: 250px;
+			color: $c-text-main;
+			background-color: #4ec8d8;
+			background-color: white; //#edf9f8;
+			font-weight: 600;
+			border-radius: 32px;
+			//border: 1px solid red;
+		}
+	}
+
+}
+
+
+.profiles_list-foot 
+.slpInfo-container { // height: $row-h * 0.8;
+	display: flex;
+	flex-flow: column nowrap;
+	height: $row-h * 1;
+	width: 100%;
+	//border: 1px solid red;
+
+	.slpNameLabel-row {
+		//background-color: rgba(226, 247,246, 0.65); 
+		background-color: #467c91;
+		//#e2f7f7; //#dff4f1;//#ACE2E5;
+		height: $row-h * 0.3;
+		margin-top: 1em;
+
+		padding: 0.5em 0;
+		padding-left: $col-w * 1.5;
+		//border-top: 2px solid #edf9f8; //#d0efeb;
+		border-bottom: 1px solid #d0efeb;
+
+		.banner-hl {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 50%;
+			background-color: #49889b;
+			//z-index: 91;
+		}
+
+		.slpNameLabel {
+			position: relative;
+			color: #edf9f8; //$c-text-subtle; //$c-text-main; //
+			font-weight: 700;
+			z-index: 93;
+			//border: 1px solid red;
+		}
+	}
+
+	.slpBtn-row {
+		background-color: #edf9f8;
+		height: $row-h * 0.7;
+
+		.profiles-list-btn {
+			flex: 1 1 auto;
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: center;
+			align-items: center;
+			background-color: #edf9f8; //#93c9c7;
+			color: $c-text-subtle; //white;
+			height: 100%;
+			width: 50%;
+			line-height: 1.5em;
+			padding: 0.5em 1em;
+			//border-radius: 6px;
+			border: 0px;
+			//border-left: 1px solid $c-text-subtle;
+			
+			
+			div, i {
+				text-align: left;
+				width: auto;
+				padding: 0;
+			}
+			div {
+				padding-right: 0.75em;
+			}
+
+			i {
+				font-size: 2.5em !important;
+			}
+		}
+		.profiles-list-btn:first-child {
+			border-right: 1px solid $c-text-subtle;
+		}
+
 	}
 }
 
-.newUserBtn {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 64px;
-	margin: 0 0.5em;
-	// margin-top: 1.5em;
-	padding: 0 2em;
-	min-width: 250px;
-	color: white;
-	background-color: #4ec8d8;
-	font-weight: 600;
-	border-radius: 32px;
-	//border: 1px solid red;
-}
+
+
+
+
+
+
+
 
 
